# air-experimental-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arduino_nano_33_ble.overlay  compile.sh  flash.bat  prj.conf
boards/arm/arduino_nano_33_ble/: arduino_nano_33_ble_defconfig
src/: altimeter_sensor.c  altimeter_sensor.h  main.c  sensor_float.h  telemetry.c  telemetry.h  threads.c  threads.h
